<resources>
    <string name="app_name">CoroutineUsageDemo</string>

    <string name="coroutine_cancel">取消协程</string>
    <string name="coroutine_cancel_children">取消页面协程</string>

    <string name="coroutine_launch">启动协程</string>
    <string name="coroutine_with_context">切换线程</string>
    <string name="coroutine_cancel_step_one">初遇取消</string>
    <string name="coroutine_scope">协程作用域</string>
    <string name="coroutine_cancel_step_two">再遇取消</string>
    <string name="coroutine_suspend_step_one">初识挂起</string>
    <string name="coroutine_structured_step_one">初识结构化</string>
    <string name="coroutine_exception_step_one">初识协程异常</string>
    <string name="coroutine_exception_supervisor">异常与supervisor</string>

    <string name="launch_io">启动IO调度器的协程</string>
    <string name="launch_main">启动Main调度器的协程</string>

    <string name="with_io_to_main">从IO到Main</string>
    <string name="with_main_to_io">从Main到IO</string>

    <string name="cancel_step_one_looping">启动循环执行的协程</string>
    <string name="cancel_step_one_looping_break">带有break的协程</string>
    <string name="cancel_step_one_looping_ensure">带有ensureActive的协程</string>

    <string name="launch_by_scope_in_page">用页面的作用域启动协程</string>
    <string name="cancel_by_scope">页面作用域取消</string>
    <string name="cancel_children">页面作用域取消已启动的协程</string>
    <string name="launch_by_global_scope">GlobalScope启动协程</string>
    <string name="launch_by_new_scope">新建作用域启动协程</string>

    <string name="launch_coroutine">launch启动协程</string>
    <string name="job_join">挂起等待job完成</string>
    <string name="async_coroutine">async启动协程</string>
    <string name="deferred_await">挂起等待await返回值</string>

    <string name="launch_structured">launch结构化启动协程</string>
    <string name="supervisor_scope">supervisorScope示例</string>

    <string name="launch_throw_exception">协程中抛出异常</string>
    <string name="launch_with_try_catch">try-catch示例</string>
    <string name="launch_with_exception_handler">ExceptionHandler示例</string>

    <string name="launch_with_job">以Job为根节点</string>
    <string name="launch_with_supervisor_job">以SupervisorJob为根节点</string>
    <string name="suspend_with_job">以Job为根节点挂起</string>
    <string name="suspend_with_supervisor_job">以SupervisorJob为根节点挂起</string>

</resources>