<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/base_btn"
        style="@style/ButtonLinearStyle"
        android:text="@string/coroutine_launch" />

    <Button
        android:id="@+id/with_context_btn"
        style="@style/ButtonLinearStyle"
        android:text="@string/coroutine_with_context" />

    <Button
        android:id="@+id/cancel_step_one_btn"
        style="@style/ButtonLinearStyle"
        android:text="@string/coroutine_cancel_step_one" />

    <Button
        android:id="@+id/coroutine_scope_btn"
        style="@style/ButtonLinearStyle"
        android:text="@string/coroutine_scope" />

    <Button
        android:id="@+id/cancel_step_two_btn"
        style="@style/ButtonLinearStyle"
        android:text="@string/coroutine_cancel_step_two" />

</LinearLayout>